--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form Validation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,14 +15,9 @@
                 <h3>Registration Form</h3>
                 <div class="form-holder">
                     <div class="form-data">
-                        <span></span>
-                        <input type="text"
-                        class="form-control"
-                        placeholder="username"
-                        required
-                        autocomplete="off"
-                        id="username"
-                        />
+                        <h4>Name</h4>
+                        <input type="text" class="form-control" placeholder="username" required autocomplete="off"
+                            id="username" />
                     </div>
                     <div class="error" id="usernameError"></div>
                 </div>
@@ -30,27 +25,17 @@
 
                 <div class="form-holder">
                     <div class="form-data">
-                        <span></span>
-                        <input type="text"
-                        class="form-control"
-                        placeholder="phone Number"
-                        required
-                        autocomplete="off"
-                        id="phone"
-                        />
+                        <h4>Phone No</h4>
+                        <input type="text" class="form-control" placeholder="phone Number" required autocomplete="off"
+                            id="phone" />
                     </div>
                     <div class="error" id="phoneError"></div>
                 </div>
                 <div class="form-holder">
                     <div class="form-data">
-                        <span></span>
-                        <input type="text"
-                        class="form-control"
-                        placeholder="mail"
-                        required
-                        autocomplete="off"
-                        id="email"
-                        />
+                        <h4>Email</h4>
+                        <input type="text" class="form-control" placeholder="mail" required autocomplete="off"
+                            id="email" />
                     </div>
                     <div class="error" id="mailError"></div>
                 </div>
@@ -59,14 +44,9 @@
 
                 <div class="form-holder">
                     <div class="form-data">
-                        <span></span>
-                        <input type="password"
-                        class="form-control"
-                        placeholder="password"
-                        required
-                        autocomplete="off"
-                        id="password"
-                        />
+                        <h4>password</h4>
+                        <input type="password" class="form-control" placeholder="password" required autocomplete="off"
+                            id="password" />
                     </div>
                     <div class="error" id="passwordError"></div>
                 </div>
@@ -74,21 +54,20 @@
 
                 <div class="form-holder">
                     <div class="form-data">
-                        <span></span>
-                        <input type="password"
-                        class="form-control"
-                        placeholder="confirm password"
-                        required
-                        autocomplete="off"
-                        id="confirmPassword"
-                        />
+                        <h4>confirm password</h4>
+                        <input type="password" class="form-control" placeholder="confirm password" required
+                            autocomplete="off" id="confirmPassword" />
                     </div>
                     <div class="error" id="confirmPasswordError"></div>
                 </div>
 
-                <button class="formSubmit">
-                    <span>Register</span>
-                </button>
+                <div class="btn">
+
+
+                    <button class="formSubmit">
+                        <span>Register</span>
+                    </button>
+                </div>
 
 
 
@@ -101,3 +80,5 @@
 </body>
 
 </html>
+
+<!-- Hsr@12345678 -->
